# vlv

./: .gitignore  CHECK_GEMMA_8090.bat  DOWNLOAD_WHISPER.bat  HANDOVER.md  INSTALL_TKINTER.bat  LICENSE  PULL_GEMMA4_PROCESSOR.bat  README.md  SECURITY.md  SERVE_GEMMA4_4BIT.bat  SERVE_GEMMA4_LLAMACPP.bat  SERVE_QWEN35.bat  START.bat  START_OFFLINE.bat  TEST_GEMMA4_VISION.bat  TEST_QWEN35_VISION.bat  add_tkinter_to_embed.ps1  analyze_transcript.py  bilibili_pipeline.py  browser_bilibili.py  download_qwen2vl_to_models.ps1  download_whisper.sh  download_whisper_models.py  extract_bilibili_text.py  gui.py  install_chromium.bat  install_qwen35_venv.ps1  llm_analyze.py  local_api_keys.example.py  pyproject.toml  pytest.ini  qwen35_vision_client.py  requirements-dev.txt  requirements-gemma4-4bit.txt  requirements-gpu.txt  requirements-online.txt  requirements-vision.txt  requirements.txt  run_gui.py  serve_gemma4_4bit.sh  (+5 more)
.cursor/rules/: claude-code-multi-agent-harness.mdc
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  contributing.md
ffmpeg/: README.md
scripts/: compile_locales.py  run_smoke.bat
src/bilibili_vision/: __init__.py  analyze_transcript.py  bilibili_pipeline.py  browser_bilibili.py  check_local_model.py  cli.py  diagnostics.py  download_whisper_models.py  errors.py  extract_bilibili_text.py  ffmpeg_utils.py  frame_vision_gemma.py  fsatomic.py  gpu_watchdog.py  gui.py  gui_chat.py  gui_common.py  gui_dialogue.py  gui_helpers.py  gui_inference.py  gui_pipeline.py  i18n.py  llm_analyze.py  llm_timeouts.py  local_vlm_openai_client.py  log_config.py  (+9 more)
tests/: conftest.py  smoke_gui.py  test_analyze_transcript.py  test_browser_bilibili.py  test_errors.py  test_fsatomic.py  test_gpu_and_diagnostics.py  test_gui_helpers.py  test_i18n_and_secrets.py  test_log_config.py  test_output_session.py  test_paths.py  test_pipeline_smoke.py  test_platform_registry.py  test_subprocess_decode.py  test_task_manager.py  test_transcribe_local_timeouts.py
(+17 files in other folders)
