[build-system]
requires = ["setuptools>=68", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlv"
description = "Video Listen View — portable cross-platform video → transcript → analysis pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "VLV maintainers" }]
dynamic = ["version"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "yt-dlp>=2025.1.0",
    "playwright>=1.40.0",
    "faster-whisper>=1.0.0",
    "static-ffmpeg>=2.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
gpu-cu12 = [
    "torch>=2.5,<2.6",
    "transformers>=4.47,<4.48",
    "accelerate>=1.2",
    "bitsandbytes>=0.45",
]
gpu-cu11 = [
    "torch>=2.5,<2.6",
    "transformers>=4.47,<4.48",
    "accelerate>=1.2",
    "bitsandbytes>=0.43",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
]

[project.scripts]
vlv = "bilibili_vision.cli:main"
vlv-gui = "bilibili_vision.gui:main"
vlv-diagnostics = "bilibili_vision.diagnostics:_cli"

[project.urls]
Homepage = "https://github.com/Jcxu97/vlv"
Issues = "https://github.com/Jcxu97/vlv/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["bilibili_vision*"]

[tool.setuptools.package-data]
bilibili_vision = ["locales/**/*.po", "locales/**/*.mo"]

[tool.setuptools_scm]
write_to = "src/bilibili_vision/_version.py"
fallback_version = "0.4.0.dev0"
